[package]
name = "rmatrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
crossterm = "0.25.0"
rand = "0.8.5"
signal-hook = "0.3.14"
termcolor = "1.1.3"
terminal_size = "0.2.1"
